--- a/src/component/main.css
+++ b/src/component/main.css
@@ -3,7 +3,7 @@
     text-align: left;
     margin-left: 8%;
     background-image: url(../image/walletconnect-header.png);
-    background-position: 501px -35px;
+    background-position: 501% -35px;
     background-size: 510px;
     background-repeat: no-repeat;
     position: relative;
@@ -12,7 +12,7 @@
 
 }
 .p{
-    padding-right: 650px
+    padding-right: 50%
 }
 .bg_black{
     background-color: rgb(32, 28, 28);
