--- a/src/component/modal.css
+++ b/src/component/modal.css
@@ -1,13 +1,16 @@
 .dinv {
     position: absolute;
     width: 30%;
+    left: 30%;
     border: 2px solid transparent;
     background-color: white;
     top: 34px;
     padding: 20px;
     border-radius: 13px;
 }
-
+.flex{
+   display: none;
+}
 .btn1 {
     display: flex;
     align-items: center;
@@ -28,7 +31,6 @@ div {
 }
 .bg_color {
     position: fixed;
-    display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
