--- a/src/component/main.css
+++ b/src/component/main.css
@@ -18,6 +18,9 @@
     background-color: rgb(32, 28, 28);
     padding: 5%;
 }
+.btn:hover{
+    background-color: rgb(2, 88, 163);
+}
 .bg_white{
     margin: 3%;
     background-color: white;
@@ -32,7 +35,11 @@
     border: 2px transparent;
     border-radius: 100%;
     width: 20%;
-   /* margin: 5%;  */
+ 
+}
+.logos:hover{
+   
+    box-shadow: 0px 2px 9px;
 }
 .ther{
     padding: 5% 15%;
@@ -54,4 +61,10 @@
     background-color: transparent;
     border: 5px solid white;
     border-radius: 0.375rem;
+    color: white;
+}
+.btnn:hover{
+    color: rgb(0, 0, 0);
+    background-color: white;
+
 }
