--- a/src/component/modal.css
+++ b/src/component/modal.css
@@ -22,7 +22,11 @@
     color: #11457d;
     border-radius: 10px;
 }
-
+.btn1:hover{
+    background-color: #11457d ;
+    border:  white 1px solid ;
+    color: white;
+}
 div {
     position: relative;
 }
