--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -14,3 +14,15 @@
     border-radius: 100px;
     
 }
+
+@media  screen and (max-width:900px) {
+    .div0{
+        display: block;
+    }
+    .div01{
+        display: flex;
+        justify-content: center;
+        margin-top: 8%;
+
+    }
+}
