--- a/src/component/main.css
+++ b/src/component/main.css
@@ -72,3 +72,29 @@
     background-color: white;
 
 }
+ 
+@media screen and (max-width:900px) {
+    *{
+        text-align: center;
+    }
+    .bg_white{
+        display: block;
+    }
+    .p{
+        padding: 2% 2% 5% 2% 
+    }
+    .div1 {
+      
+        background-position: 51% 250px;
+        background-size: 103%;
+        height: 411px;
+        top: 27px;
+        margin-left: 0%;
+    }
+    .div3{
+        display: grid;
+       grid-template-columns: auto auto ;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+}
