--- a/src/component/modali.css
+++ b/src/component/modali.css
@@ -55,3 +55,10 @@
     top: 4px;
     left:95%;
 }
+@media screen and (max-width:900px) {
+    .din {
+        position: static;
+        width: 89%;
+        left: 0%;
+    }
+}
